lab1/Test/L1-A-3-66.output
Error Type A at Line 1
Error Type B at Line 5
Error Type B at Line 5
